// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Breadcrumbs/Breadcrumbs Defaults smoke-test 1`] = `
<div data-test-block="true">
  <nav class
       aria-label="Du er her:"
  >
    <ol class="_breadcrumbsList_18d82_1">
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Bedrift og organisasjon
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Avgifter
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Avgifter på bil og kjøretøy
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1"
          aria-current="page"
      >
        <span>
          Vektårsavgift
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Tester/Breadcrumbs/Breadcrumbs WithAriaLabel play-test 1`] = `
<div data-test-block="true">
  <nav class
       aria-label="Du er her:"
  >
    <ol class="_breadcrumbsList_18d82_1  _breadcrumbsListExpanded_18d82_16">
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Bedrift og organisasjon
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Avgifter
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Avgifter på bil og kjøretøy
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Vektårsavgift
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          VH89236
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Bla bla bla
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1"
          aria-current="page"
      >
        <span>
          En siste link
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Tester/Breadcrumbs/Breadcrumbs WithAttributes play-test 1`] = `
<div data-test-block="true">
  <nav id="htmlId"
       class="dummyClassname"
       lang="nb"
       data-testid="123ID"
       aria-label="Du er her:"
  >
    <ol class="_breadcrumbsList_18d82_1">
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Bedrift og organisasjon
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Avgifter
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Avgifter på bil og kjøretøy
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1"
          aria-current="page"
      >
        <span>
          Vektårsavgift
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Tester/Breadcrumbs/Breadcrumbs WithCollapsed play-test 1`] = `
<div data-test-block="true">
  <nav class
       aria-label="Du er her:"
  >
    <ol class="_breadcrumbsList_18d82_1 _breadcrumbsListCollapsed_18d82_11">
      <li class="_expandButtonWrapper_18d82_20">
        <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r0:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r0:">
              Vis hele stien
            </title>
            <path d="M16 12a2 2 0 1 1 4 0 2 2 0 0 1-4 0Zm-6 0a2 2 0 1 1 4 0 2 2 0 0 1-4 0Zm-6 0a2 2 0 1 1 4 0 2 2 0 0 1-4 0Z">
            </path>
          </svg>
        </button>
        <span>
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Bla bla bla
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1"
          aria-current="page"
      >
        <span>
          En siste link
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Tester/Breadcrumbs/Breadcrumbs WithExpandClickAndFocus play-test 1`] = `
<div data-test-block="true">
  <nav class
       aria-label="Du er her:"
  >
    <ol class="_breadcrumbsList_18d82_1  _breadcrumbsListExpanded_18d82_16">
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Bedrift og organisasjon
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Avgifter
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Avgifter på bil og kjøretøy
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Vektårsavgift
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          VH89236
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Bla bla bla
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1"
          aria-current="page"
      >
        <span>
          En siste link
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Tester/Breadcrumbs/Breadcrumbs WithNavigation smoke-test 1`] = `
<div data-test-block="true">
  <nav class
       aria-label="Du er her:"
  >
    <ol class="_breadcrumbsList_18d82_1 _breadcrumbsListCollapsed_18d82_11">
      <li class="_expandButtonWrapper_18d82_20">
        <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r2:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r2:">
              Vis hele stien
            </title>
            <path d="M16 12a2 2 0 1 1 4 0 2 2 0 0 1-4 0Zm-6 0a2 2 0 1 1 4 0 2 2 0 0 1-4 0Zm-6 0a2 2 0 1 1 4 0 2 2 0 0 1-4 0Z">
            </path>
          </svg>
        </button>
        <span>
          /
        </span>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Bla bla bla
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1"
          aria-current="page"
      >
        <span>
          En siste link
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Tester/Breadcrumbs/Breadcrumbs WithRef play-test 1`] = `
<div data-test-block="true">
  <nav class
       aria-label="Du er her:"
       id="dummyIdForwardedFromRef"
  >
    <ol class="_breadcrumbsList_18d82_1">
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Bedrift og organisasjon
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Avgifter
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Avgifter på bil og kjøretøy
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1"
          aria-current="page"
      >
        <span>
          Vektårsavgift
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Tester/Breadcrumbs/Breadcrumbs WithoutCollapse play-test 1`] = `
<div data-test-block="true">
  <nav class
       aria-label="Du er her:"
  >
    <ol class="_breadcrumbsList_18d82_1  _breadcrumbsListExpanded_18d82_16">
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Bedrift og organisasjon
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Avgifter
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Avgifter på bil og kjøretøy
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Vektårsavgift
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          VH89236
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1">
        <a class="_link_1tclx_1  "
           href="#"
        >
          Bla bla bla
        </a>
      </li>
      <li class="_breadcrumbsItem_12l2m_1"
          aria-current="page"
      >
        <span>
          En siste link
        </span>
      </li>
    </ol>
  </nav>
</div>
`;
